Added HTML code for introductions

--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Page Title</title>
+    <title>About Me</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            line-height: 1.6;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .main-info {
+            background: #333;
+            color: #fff;
+            padding: 20px;
+        }
+        .main-info h1 {
+            margin: 0;
+        }
+        .hobbies, .career, .course {
+            background: #e7e7e7;
+            padding: 15px;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-	<h1>This is a Heading</h1>
-	<p>This is a paragraph.</p>
+    <div class="container">
+        <header class="main-info">
+            <h1>Your Name: Sindre Magnus Haltbakk</h1>
+            <p>Preferred Name: Sindre</p>
+        </header>
+
+        <section class="career">
+            <h2>Job Responsibilities</h2>
+            <p>I previously worked as a First Officer at SkyWest Airlines. </p>
+        </section>
+
+        <section class="hobbies">
+            <h2>Hobbies and Special Interests</h2>
+            <p>Hobbies includes gaming, watching tv-series/movies, where The Sopranos is a favorite.</p>
+        </section>
+
+        <section class="career">
+            <h2>Reasons for Pursuing This Degree</h2>
+            <p>I am pursuing a degree in Aviation Administration to increase my competency within aviation, which will open up more opportunities within the field.</p>
+        </section>
+
+        <section class="course">
+            <h2>Reasons for Taking This Course</h2>
+            <p>I am taking this course as it is a requirement for my major. In addition, I want to increase my basis level of knowledge within computer science. Furthermore, it seems interesting, and is quite different 
+from courses I have previously taken. Lastly, the meeting times are quite favorable!</p>
+        </section>
+
+        <section class="fun-fact">
+            <h2>Fun Fact</h2>
+            <p>I have the ability, in a matter of minutes; provide instruction to raise a person from zero to a poor-mediocre level in party dance.  </p>
+        </section>
+    </div>
 </body>
 </html>
